objects/EducationWorkMinistryExperience__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education, Work &amp; Ministry Experience</relationshipLabel>
        <relationshipName>EducationWorkMinistryExperience</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields><fields>
        <fullName>PMLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Leader</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PracticalMinistry__c</fullName>
        <label>Practical Ministry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Breakfast Prep</fullName>
                </value>
                <value>
                    <fullName>Cafe des Alpes</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Dinner Clean Up</fullName>
                </value>
                <value>
                    <fullName>Dinner Prep</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Housekeeping</fullName>
                </value>
                <value>
                    <fullName>Lunch Clean Up</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Education, Work &amp; Ministry Experience</label><nameField>
        <label>Education, Work &amp; Ministry Experience Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Education, Work &amp; Ministry Experience</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <description>Higher education and other training experience</description>
        <label>Education</label>
    </recordTypes><recordTypes>
        <fullName>Ministry</fullName>
        <active>true</active>
        <description>Includes both YWAM/UofN and other ministries/organizations</description>
        <label>Ministry</label>
    </recordTypes><recordTypes>
        <fullName>PracticalMinistry</fullName>
        <active>true</active>
        <description>YWAM Lausanne Practical Ministry experience</description>
        <label>Practical Ministry</label>
    </recordTypes><recordTypes>
        <fullName>PracticalMinistryForm</fullName>
        <active>true</active>
        <description>Used for the PM form that students fill in at the start of the quarter</description>
        <label>Practical Ministry Form</label>
    </recordTypes><recordTypes>
        <fullName>Work</fullName>
        <active>true</active>
        <description>Jobs and other non ministry related work experience</description>
        <label>Work</label>
    </recordTypes></CustomObject>